Prevent carousel arrow overlap on quote carousel

--- a/src/scss/quote-carousel.scss
+++ b/src/scss/quote-carousel.scss
@@ -9,4 +9,6 @@
   font-size: 26px;
   line-height: 1.6;
   font-weight: normal;
+  padding-right: 80px;
+  padding-left: 80px;
 }
